discussion/kv_engine/174041/174041_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

Let the command dispatcher call shouldThrottle

Call shouldThrottle before trying to execute a command
and put it in the dispatcher. Let the tick schedule a
task to reevaluate the throttled commands

Change-Id: Iaa86be07c3123b2eff5d93d3a5ca66c5937f7602

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-04-26 06:18:23.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 06:47:34.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16980/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:92:38: error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand" [clang-diagnostic-error]
            adminConnection->execute(SetBucketComputeUnitThrottleLimitCommand{
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_mcbp_commands.h:1275:5: note: candidate constructor not viable: requires at most 2 arguments, but 5 were provided
    SetBucketComputeUnitThrottleLimitCommand(const std::string& key_,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_mcbp_commands.h:1273:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 5 were provided
class SetBucketComputeUnitThrottleLimitCommand : public BinprotGenericCommand {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_mcbp_commands.h:1273:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 5 were provided
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:114:38: error: use of undeclared identifier "SetBucketComputeUnitThrottleLimitsCommand" [clang-diagnostic-error]
            adminConnection->execute(SetBucketComputeUnitThrottleLimitsCommand{
                                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16980/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16980/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45623/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_elixir.cc(92): error C2440: "initializing": cannot convert from "initializer list" to "SetBucketComputeUnitThrottleLimitCommand" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45623/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6732/ : FAILURE

Compile error at [2022-04-26T06:29:59.022Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_elixir.cc:93:58:
error: no matching function for call to ?SetBucketComputeUnitThrottleLimitCommand::SetBucketComputeUnitThrottleLimitCommand(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6732/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6639/ : FAILURE

Compile error at [2022-04-26T06:46:41.183Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17886/ : FAILURE

Compile error at [2022-04-26T06:27:03.918Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17886/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19108/ : FAILURE

Compile error at [2022-04-26T06:29:35.326Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp/testapp_elixir.cc:93:58:
error: no matching function for call to ?SetBucketComputeUnitThrottleLimitCommand::SetBucketComputeUnitThrottleLimitCommand(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19108/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19806/ : FAILURE

Compile error at [2022-04-26T06:40:24.602Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19806/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18764/ : FAILURE

Compile error at [2022-04-26T06:32:03.755Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_elixir.cc:93:58:
error: no matching function for call to ?SetBucketComputeUnitThrottleLimitCommand::SetBucketComputeUnitThrottleLimitCommand(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18764/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27179/ : FAILURE

Compile error at [2022-04-26T06:45:04.251Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38328/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38328/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15948/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-04-26 06:48:15.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
